<resources>
    <string name="app_name">Co-lendar</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerToLogin">Already have an account ?\n Login here.</string>
    <string name="loginToRegister">Don\'t have an account ?\n Register here.</string>
    <string name="createAccountPrompt">Create an account</string>
    <string name="resetPassword">Reset password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="loginPrompt">Connect to your account:</string>
    <string name="homeGreeting">Hello, </string>
    <string name="passwordRequired">Password is required.</string>
    <string name="passwordTooShort">Password should be at least 6 characters long.</string>
    <string name="passwordsDontMatch">Passwords don\'t match.</string>
    <string name="emailInvalid">Email is not valid.</string>
    <string name="firstNameRequired">First name is required.</string>
    <string name="lastNameRequired">Last name is required.</string>
    <string name="emailRequired">Email is required.</string>
    <string name="confirmPasswordRequired">Confirm password.</string>
    <string name="registrationSuccessful">User registered successfully.</string>
    <string name="registrationFailed">Registration failed. Try again!</string>
    <string name="loginFailed">Failed to log in. Try again!</string>
    <string name="tableNameUsers">users</string>
    <string name="emailRegex">(?:[a-z0-9!#$%&amp;\'*+/=?^_`{|}~-]+(?:\\.[a-z0-9!#$%&amp;\'*+/=?^_`{|}~-]+)*|\"(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21\\x23-\\x5b\\x5d-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])*\")@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\\x01-\\x08\\x0b\\x0c\\x0e-\\x1f\\x21-\\x5a\\x53-\\x7f]|\\\\[\\x01-\\x09\\x0b\\x0c\\x0e-\\x7f])+)\\])</string>
    <string name="imageUploadSuccess">The image has been successfully uploaded.</string>
    <string name="imageUploadFailure">The image failed to be uploaded. Try again.</string>
    <string name="imageDownloadFailure">The image failed to be downloaded</string>
    <string name="thisWeek">This Week</string>
    <string name="month">December 2021</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="day1">1</string>
    <string name="day2">2</string>
    <string name="day3">3</string>
    <string name="day4">4</string>
    <string name="day5">5</string>
    <string name="day6">6</string>
    <string name="day7">7</string>
    <string name="requests">New requests</string>
    <string name="EventName">Event name</string>
    <string name="Date">11 nov, 1PM to 15PM</string>
    <string name="Location">This is an address</string>
    <string name="MessageWrite">Write your message here</string>
    <string name="Message">This is a message</string>
    <string name="GroupName">Group name</string>
    <string name="Add2">+2</string>
    <string name="SenderName">Name of the sender</string>
    <string name="FollowRequest"> is asking to follow you !</string>
    <string name="ReceiverName">Receiver name</string>
    <string name="Invite">Invite</string>
    <string name="To">to</string>
    <string name="In">in</string>
    <string name="Ask">Ask</string>
    <string name="ToFollowThem">to follow them</string>
    <string name="RequestFeedbackText"> accepted or refused your request !</string>
    <string name="RequestTopic">Request topic</string>
    <string name="OK">OK</string>
    <string name="NameOfGroup">Name of Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addressPlaceholder">here goes address. It might be long</string>
    <string name="timePlaceholder">12PM to 1:30PM</string>
    <string name="extraGuestsNumber">+2</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="some_upcoming_events">Upcoming events</string>
    <string name="date_placeholder">No events today</string>
    <string name="event_name">Event name</string>
    <string name="participants">Participants</string>
    <string name="event_infos">Event Infos</string>
    <string name="time">Time:</string>
    <string name="url">URL:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_groups">Your groups:</string>
    <string name="address">Address:</string>
    <string name="date">Date:</string>
    <string name="comments">Comments:</string>
    <string name="search_for_users">Search for users</string>

</resources>
