<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/week_calendar_bg"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thisWeek"
        android:fontFamily="@font/abeezee"
        android:textSize="30sp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        >

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:fontFamily="@font/abeezee" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:id="@+id/day1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day4"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day5"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day6"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day7"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/eventsContainer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/colorTeal">

        <ListView
            android:id="@+id/eventListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">
        </ListView>

    </androidx.cardview.widget.CardView>

</LinearLayout>