<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <ImageButton
            android:id="@+id/personIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="15dp"
            tools:layout_marginTop="15dp"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        tools:context=".WeekViewActivity">

        <TextView
            android:id="@+id/ThisWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackground"
            android:paddingLeft="05dp"
            android:paddingBottom="20dp"
            android:text="@string/thisWeek"
            android:textColor="@color/fadeBlue"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackground"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/ic_back" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/month"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="25sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@drawable/ic_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:text="@string/day1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day2"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day3"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day4"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day5"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day6"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day7"
                android:textAlignment="center"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/eventsContainer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/colorGrey">

            <ListView
                android:id="@+id/eventListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">


            </ListView>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDarkBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Requests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="05dp"
                    android:text="@string/requests"
                    android:textColor="@color/fadeBlue"
                    android:textSize="30sp" />

                <ListView
                    android:id="@+id/requestsListView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="5" />
            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
