<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#24454C">

    <TextView
        android:id="@+id/colendarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/createAccountPrompt"
        android:textColor="#FFFFFF"
        android:textSize="40dp" />


    <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:layout_marginTop="120dp"
            android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="521dp"
            android:background="#2b535c">

            <EditText
                android:id="@+id/editText_firstName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/firstName"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_lastName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="180dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/lastName"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="280dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="330dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_passwordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="380dp"
                android:background="#24454C"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:paddingStart="10dp"
                android:textColorHint="#bababa"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="430dp"
                android:backgroundTint="#1093A7"
                android:shadowRadius="0"
                android:text="@string/register"
                android:textSize="30sp"
                app:cornerRadius="30dp" />

            <ImageButton
                android:id="@+id/imageButton_profilePicture"
                android:layout_width="83dp"
                android:layout_height="84dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="185dp"
                android:layout_marginTop="82dp"
                app:srcCompat="@android:drawable/ic_menu_edit" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:text="@string/registerToLogin"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="640dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView_backToLogin"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>