<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24454C">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#24454C">

            <TextView
                android:id="@+id/colendarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#2b535c">

                    <EditText
                        android:id="@+id/editText_email"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="120dp"
                        android:background="#24454C"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textColor="#bababa"
                        android:textColorHint="#bababa"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText_password"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="200dp"
                        android:background="#24454C"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="#bababa"
                        android:textColorHint="#bababa"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="280dp"
                        android:backgroundTint="#1093A7"
                        android:shadowRadius="0"
                        android:text="@string/login"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView_resetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="370dp"
                        android:gravity="center"
                        android:text="@string/resetPassword"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/loginPrompt"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="660dp"
                android:gravity="center"
                android:text="@string/loginToRegister"
                android:textColor="#FFFFFF" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>